the horizontal scrollbar no longer appears

--- a/src/js/App.css
+++ b/src/js/App.css
@@ -6,6 +6,7 @@
   top: 0;
   left:0;
   background-image: url(./Images/virus.jpg);
+  overflow-x: hidden
 }
 
 
